# go/api/model_active_match_region_mode.go
@@ -1,119 +1,0 @@
-/*
-Deadlock API
-
- ## API Clients  We have auto generated and updated clients for many languages. You can find them here: [https://github.com/deadlock-api/openapi-clients](https://github.com/deadlock-api/openapi-clients)  ## Support the Deadlock API  Whether you're building your own database, developing data science projects, or enhancing your website with game and player analytics, the Deadlock API has the data you need.  Your sponsorship helps keep this resource open, free and future-proof for everyone. By supporting the Deadlock API, you will enable continued development, new features and reliable access for developers, analysts and streamers worldwide.  Help us continue to provide the data you need - sponsor the Deadlock API today!  **-> You can Sponsor the Deadlock API on [Patreon](https://www.patreon.com/c/user?u=68961896) or [GitHub](https://github.com/sponsors/raimannma)**  ## Disclaimer _deadlock-api.com is not endorsed by Valve and does not reflect the views or opinions of Valve or anyone officially involved in producing or managing Valve properties. Valve and all associated properties are trademarks or registered trademarks of Valve Corporation_         
-
-API version: 0.1.0
-*/
-
-// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
-
-package deadlock_api_client
-
-import (
-	"encoding/json"
-	"fmt"
-)
-
-// ActiveMatchRegionMode the model 'ActiveMatchRegionMode'
-type ActiveMatchRegionMode string
-
-// List of ActiveMatchRegionMode
-const (
-	ROW ActiveMatchRegionMode = "Row"
-	EUROPE ActiveMatchRegionMode = "Europe"
-	SE_ASIA ActiveMatchRegionMode = "SeAsia"
-	S_AMERICA ActiveMatchRegionMode = "SAmerica"
-	RUSSIA ActiveMatchRegionMode = "Russia"
-	OCEANIA ActiveMatchRegionMode = "Oceania"
-)
-
-// All allowed values of ActiveMatchRegionMode enum
-var AllowedActiveMatchRegionModeEnumValues = []ActiveMatchRegionMode{
-	"Row",
-	"Europe",
-	"SeAsia",
-	"SAmerica",
-	"Russia",
-	"Oceania",
-}
-
-func (v *ActiveMatchRegionMode) UnmarshalJSON(src []byte) error {
-	var value string
-	err := json.Unmarshal(src, &value)
-	if err != nil {
-		return err
-	}
-	enumTypeValue := ActiveMatchRegionMode(value)
-	for _, existing := range AllowedActiveMatchRegionModeEnumValues {
-		if existing == enumTypeValue {
-			*v = enumTypeValue
-			return nil
-		}
-	}
-
-	return fmt.Errorf("%+v is not a valid ActiveMatchRegionMode", value)
-}
-
-// NewActiveMatchRegionModeFromValue returns a pointer to a valid ActiveMatchRegionMode
-// for the value passed as argument, or an error if the value passed is not allowed by the enum
-func NewActiveMatchRegionModeFromValue(v string) (*ActiveMatchRegionMode, error) {
-	ev := ActiveMatchRegionMode(v)
-	if ev.IsValid() {
-		return &ev, nil
-	} else {
-		return nil, fmt.Errorf("invalid value '%v' for ActiveMatchRegionMode: valid values are %v", v, AllowedActiveMatchRegionModeEnumValues)
-	}
-}
-
-// IsValid return true if the value is valid for the enum, false otherwise
-func (v ActiveMatchRegionMode) IsValid() bool {
-	for _, existing := range AllowedActiveMatchRegionModeEnumValues {
-		if existing == v {
-			return true
-		}
-	}
-	return false
-}
-
-// Ptr returns reference to ActiveMatchRegionMode value
-func (v ActiveMatchRegionMode) Ptr() *ActiveMatchRegionMode {
-	return &v
-}
-
-type NullableActiveMatchRegionMode struct {
-	value *ActiveMatchRegionMode
-	isSet bool
-}
-
-func (v NullableActiveMatchRegionMode) Get() *ActiveMatchRegionMode {
-	return v.value
-}
-
-func (v *NullableActiveMatchRegionMode) Set(val *ActiveMatchRegionMode) {
-	v.value = val
-	v.isSet = true
-}
-
-func (v NullableActiveMatchRegionMode) IsSet() bool {
-	return v.isSet
-}
-
-func (v *NullableActiveMatchRegionMode) Unset() {
-	v.value = nil
-	v.isSet = false
-}
-
-func NewNullableActiveMatchRegionMode(val *ActiveMatchRegionMode) *NullableActiveMatchRegionMode {
-	return &NullableActiveMatchRegionMode{value: val, isSet: true}
-}
-
-func (v NullableActiveMatchRegionMode) MarshalJSON() ([]byte, error) {
-	return json.Marshal(v.value)
-}
-
-func (v *NullableActiveMatchRegionMode) UnmarshalJSON(src []byte) error {
-	v.isSet = true
-	return json.Unmarshal(src, &v.value)
-}
-
