# php/api/api/Model/ActiveMatchRegionMode.php
@@ -1,74 +1,0 @@
-<?php
-/**
- * ActiveMatchRegionMode
- *
- * PHP version 8.1
- *
- * @category Class
- * @package  OpenAPI\Client
- * @author   OpenAPI Generator team
- * @link     https://openapi-generator.tech
- */
-
-/**
- * Deadlock API
- *
- * ## API Clients  We have auto generated and updated clients for many languages. You can find them here: [https://github.com/deadlock-api/openapi-clients](https://github.com/deadlock-api/openapi-clients)  ## Support the Deadlock API  Whether you're building your own database, developing data science projects, or enhancing your website with game and player analytics, the Deadlock API has the data you need.  Your sponsorship helps keep this resource open, free and future-proof for everyone. By supporting the Deadlock API, you will enable continued development, new features and reliable access for developers, analysts and streamers worldwide.  Help us continue to provide the data you need - sponsor the Deadlock API today!  **-> You can Sponsor the Deadlock API on [Patreon](https://www.patreon.com/c/user?u=68961896) or [GitHub](https://github.com/sponsors/raimannma)**  ## Disclaimer _deadlock-api.com is not endorsed by Valve and does not reflect the views or opinions of Valve or anyone officially involved in producing or managing Valve properties. Valve and all associated properties are trademarks or registered trademarks of Valve Corporation_
- *
- * The version of the OpenAPI document: 0.1.0
- * Generated by: https://openapi-generator.tech
- * Generator version: 7.17.0
- */
-
-/**
- * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
- * https://openapi-generator.tech
- * Do not edit the class manually.
- */
-
-namespace OpenAPI\Client\Model;
-use \OpenAPI\Client\ObjectSerializer;
-
-/**
- * ActiveMatchRegionMode Class Doc Comment
- *
- * @category Class
- * @package  OpenAPI\Client
- * @author   OpenAPI Generator team
- * @link     https://openapi-generator.tech
- */
-class ActiveMatchRegionMode
-{
-    /**
-     * Possible values of this enum
-     */
-    public const ROW = 'Row';
-
-    public const EUROPE = 'Europe';
-
-    public const SE_ASIA = 'SeAsia';
-
-    public const S_AMERICA = 'SAmerica';
-
-    public const RUSSIA = 'Russia';
-
-    public const OCEANIA = 'Oceania';
-
-    /**
-     * Gets allowable values of the enum
-     * @return string[]
-     */
-    public static function getAllowableEnumValues()
-    {
-        return [
-            self::ROW,
-            self::EUROPE,
-            self::SE_ASIA,
-            self::S_AMERICA,
-            self::RUSSIA,
-            self::OCEANIA
-        ];
-    }
-}
-
-
